DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/amc__Tax_Rate__c.object-meta.xml
<CustomObject>
    <description>Enables users to specify the Tax Rates relevant to their business operations.</description>
    <label>Tax Rate</label>
    <nameField>
        <label>Tax Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>