DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Amount_Label__c.field-meta.xml
<CustomField>
    <fullName>amc__Amount_Label__c</fullName>
    <inlineHelpText>Can be used to override the ‘Amount’ label at the top of the detail section on the PDF Template</inlineHelpText>
    <label>Amount Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>