DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Amount_Paid_Label__c.field-meta.xml
<CustomField>
    <fullName>amc__Amount_Paid_Label__c</fullName>
    <inlineHelpText>Can be used to override the ‘Amount Paid’ label on the PDF Template</inlineHelpText>
    <label>Amount Paid Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>