DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Balance_Due_Label__c.field-meta.xml
<CustomField>
    <fullName>amc__Balance_Due_Label__c</fullName>
    <inlineHelpText>Can be used to override the ‘Balance Due’ label on the PDF Template</inlineHelpText>
    <label>Balance Due Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>