DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Business_Number__c.field-meta.xml
<CustomField>
    <fullName>amc__Business_Number__c</fullName>
    <inlineHelpText>Identifies the Business Number of the business unit that will raise this invoice / credit note</inlineHelpText>
    <label>Business Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>