DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__City__c.field-meta.xml
<CustomField>
    <fullName>amc__City__c</fullName>
    <inlineHelpText>Identifies the City of the business unit that will raise this invoice / credit note</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>