DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Country__c.field-meta.xml
<CustomField>
    <fullName>amc__Country__c</fullName>
    <inlineHelpText>Identifies the Country of the business unit that will raise this invoice / credit note</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>