DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>amc__Currency_Symbol__c</fullName>
    <inlineHelpText>Identifies the symbol used for the currency (e.g. $ or £)</inlineHelpText>
    <label>Currency Symbol</label>
    <length>5</length>
    <type>Text</type>
</CustomField>