DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Custom_Header_Field_1_Label__c.field-meta.xml
<CustomField>
    <fullName>amc__Custom_Header_Field_1_Label__c</fullName>
    <inlineHelpText>Enter the Label to be used with Custom Header Field 1</inlineHelpText>
    <label>Custom Header Field 1 Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>