DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Custom_Header_Field_2__c.field-meta.xml
<CustomField>
    <fullName>amc__Custom_Header_Field_2__c</fullName>
    <inlineHelpText>Enter the API Name of the Custom Field you would like to display</inlineHelpText>
    <label>Custom Header Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>