DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Date_Format__c.field-meta.xml
<CustomField>
    <fullName>amc__Date_Format__c</fullName>
    <description>Enter the date format to be used in billing for items using this tax rate. Date format should be entered in Java simple date format such as dd/MM/yyyy or MM/dd/yyyy. If the time zone cannot be determined, the running Users locale is used.</description>
    <inlineHelpText>Enter the date format to be used in billing for items using this tax rate. Date format should be entered in Java simple date format such as dd/MM/yyyy or MM/dd/yyyy. If the time zone cannot be determined, the running Users locale is used.</inlineHelpText>
    <label>Date Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>