DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Default__c.field-meta.xml
<CustomField>
    <fullName>amc__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if this Tax Rate is to be used as the default tax rate</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>