DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Description_Label__c.field-meta.xml
<CustomField>
    <fullName>amc__Description_Label__c</fullName>
    <inlineHelpText>Can be used to override the ‘Description’ label on the PDF Template</inlineHelpText>
    <label>Description Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>