DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Due_Date_Label__c.field-meta.xml
<CustomField>
    <fullName>amc__Due_Date_Label__c</fullName>
    <inlineHelpText>Can be used to override the ‘Due Date’ label on the PDF Template</inlineHelpText>
    <label>Due Date Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>