DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Invoice_Field__c.field-meta.xml
<CustomField>
    <fullName>amc__Invoice_Field__c</fullName>
    <inlineHelpText>If you wish to hide this field, please enter Hidden. If you wish to replace the standard field, please enter the API Name of the Custom Field you wish to use</inlineHelpText>
    <label>Invoice # Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>