DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Invoice_Footer_Notes__c.field-meta.xml
<CustomField>
    <fullName>amc__Invoice_Footer_Notes__c</fullName>
    <inlineHelpText>Identifies the text to be included in the footer notes for invoices / credit notes raised by this business unit</inlineHelpText>
    <label>Invoice Footer Notes</label>
    <type>TextArea</type>
</CustomField>