DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Invoice_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>amc__Invoice_Header_Text__c</fullName>
    <inlineHelpText>Identifies the title of the PDF for an Invoice</inlineHelpText>
    <label>Invoice Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>