DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Invoice_Label__c.field-meta.xml
<CustomField>
    <fullName>amc__Invoice_Label__c</fullName>
    <inlineHelpText>Can be used to override the ‘Invoice #’ label on the PDF Template</inlineHelpText>
    <label>Invoice # Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>