DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Logo_Id__c.field-meta.xml
<CustomField>
    <fullName>amc__Logo_Id__c</fullName>
    <inlineHelpText>Identifies the Id of the Logo (stored in SFDC Documents) that will be used for this business unit</inlineHelpText>
    <label>Logo Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>