DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Plus_Label__c.field-meta.xml
<CustomField>
    <fullName>amc__Plus_Label__c</fullName>
    <inlineHelpText>Can be used to override the ‘Plus’ label on the PDF Template</inlineHelpText>
    <label>Plus Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>