DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Postcode__c.field-meta.xml
<CustomField>
    <fullName>amc__Postcode__c</fullName>
    <inlineHelpText>Identifies the Postcode of the business unit that will raise this invoice / credit note</inlineHelpText>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>