DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Street__c.field-meta.xml
<CustomField>
    <fullName>amc__Street__c</fullName>
    <inlineHelpText>Identifies the Street address of the business unit that will raise this invoice / credit note</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>