DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Summary_Label__c.field-meta.xml
<CustomField>
    <fullName>amc__Summary_Label__c</fullName>
    <description>Can be used to override the ‘Summary’ label on the PDF Template</description>
    <inlineHelpText>Can be used to override the ‘Summary’ label on the PDF Template</inlineHelpText>
    <label>Summary Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>