DigicielFull/force-app/main/default/objects/amc__Tax_Rate__c/fields/amc__Tax_Label__c.field-meta.xml
<CustomField>
    <fullName>amc__Tax_Label__c</fullName>
    <inlineHelpText>Identifies the label for this tax record that will be used on invoices (e.g. GST)</inlineHelpText>
    <label>Tax Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>